# tailscaled-rs

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  NOTICE  README.md  SECURITY.md  build.rs  codecov.yml  release-please-config.json
.beads/: config.yaml  interactions.jsonl  metadata.json
.beads/hooks/: commit-msg  post-checkout  post-commit  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml  stale.yml
docs/: DESIGN.md  ENGINE.md  ENGINE_ASKS.md  PARITY_GAP_ANALYSIS.md  TESTING.md  THREAT_MODEL.md
packaging/: README.md
packaging/launchd/: cloud.tailscaled-rs.tailnetd.plist
packaging/macos/: install.sh  uninstall.sh
packaging/systemd/: tailnetd-tun.service  tailnetd.service
src/: auth.rs  conffile.rs  debugserver.rs  hardening.rs  httpproxy.rs  ipforward.rs  ipn.rs  lib.rs  localapi.rs  prefs.rs  server.rs  socks5.rs
src/ipn/: config.rs  control_url.rs  diag.rs  install.rs  linkmon.rs  mod.rs  profile.rs  revert_guard.rs  serve.rs  state.rs  syspolicy.rs
test-support/headscale/: README.md  config.yaml  docker-compose.yml
tests/: control_url.rs  headscale_e2e.rs  localapi_loop.rs
