[package]
name = "tailscaled-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "BSD-3-Clause"
repository = "https://github.com/GeiserX/tailscaled-rs"
description = "An independent, from-scratch Rust system daemon that joins a WireGuard-based mesh overlay, speaking the Tailscale control protocol. Wraps the tailscale-rs engine in a long-running, IPC-controlled daemon (the layer the embeddable library omits). Not affiliated with, endorsed by, or sponsored by Tailscale Inc.; 'Tailscale' is a trademark of Tailscale Inc."

# The publishable crate is `tailscaled-rs` (imported as `tailscaled_rs`). The installed
# binaries are deliberately `tailnetd` (daemon) + `tnet` (CLI) so they never collide on PATH
# with an actual Tailscale install. The cryptographic/networking engine is the separate
# `tailscale-rs` dependency below (imported as `tailscale`).

[lib]
name = "tailscaled_rs"
path = "src/lib.rs"

[[bin]]
name = "tailnetd"
path = "src/bin/tailnetd.rs"

[[bin]]
name = "tnet"
path = "src/bin/tnet.rs"

[dependencies]
# The engine: a from-scratch Rust Tailscale-protocol library. Imported as `tailscale` (the lib
# name), published crate (package) name `geiserx_tailscale` — the workspace renamed every crate to
# the `geiserx_*` namespace for crates.io publication, but kept the importable lib name `tailscale`,
# so `use tailscale::...` is unchanged. Pinned to a specific rev for reproducible builds; Cargo.lock
# is committed so CI and every clone build the exact same engine. (When `geiserx_tailscale` v0.6.7+
# is live on crates.io, this can move to a plain `version`-based crates.io dep.)
#
# Local engine iteration (optional): a *gitignored* `.cargo/config.toml` with
#   paths = ["/path/to/your/tailscale-rs/checkout"]
# transparently overrides this git dep when the local checkout's version matches the pin —
# so you can edit the engine and rebuild the daemon with no manifest change. See README.
tailscale = { package = "geiserx_tailscale", git = "https://github.com/GeiserX/tailscale-rs", rev = "f64aebe1162097987f79bf16ca46d4570c95ad47" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Secret strings: zeroize-on-drop, no Debug/serialize by default (auth keys / tokens in the daemon).
secrecy = "0.10"
# Peer-process euid for the same-user LocalAPI write policy. libc is already in the tree
# (transitively via the engine); used only for geteuid() on unix.
libc = "0.2"
# Parse a control-server URL string (from prefs / CLI) into the engine's `url::Url` Config field.
# Pinned to the same 2.x the engine resolves.
url = "2"

[features]
# TUN-mode data path (Phase 3). Off by default so the standard build stays lean and unprivileged
# (the default is the engine's userspace smoltcp netstack). Enabling `tun` pulls in the engine's
# kernel-TUN transport (`ts_transport_tun` via `tailscale/tun`); a daemon built with it can run in
# `TransportMode::Tun`, which needs root / `CAP_NET_ADMIN` and a TUN-capable platform (Linux
# `/dev/net/tun`, macOS `utun`). Build with `cargo build --features tun`.
default = []
tun = ["tailscale/tun"]

[profile.release]
strip = true
