[package]
name = "tailscaled-rs"
version = "0.52.0"
edition = "2024"
rust-version = "1.95"
license = "BSD-3-Clause"
repository = "https://github.com/GeiserX/tailscaled-rs"
description = "An independent, from-scratch Rust system daemon that joins a WireGuard-based mesh overlay, speaking the Tailscale control protocol. Wraps the tailscale-rs engine in a long-running, IPC-controlled daemon (the layer the embeddable library omits). Not affiliated with, endorsed by, or sponsored by Tailscale Inc.; 'Tailscale' is a trademark of Tailscale Inc."

# Lint policy. `unreachable_pub` keeps the API surface honest: an item declared `pub` that is not
# actually reachable outside its module should be `pub(super)`/`pub(crate)` instead. Kept at `warn`
# (not `deny`) so it surfaces drift in local builds + CI logs without unexpectedly breaking the build.
[lints.rust]
unreachable_pub = "warn"

# The publishable crate is `tailscaled-rs` (imported as `tailscaled_rs`). The installed
# binaries are deliberately `tailnetd` (daemon) + `tnet` (CLI) so they never collide on PATH
# with an actual Tailscale install. The cryptographic/networking engine is the separate
# `tailscale-rs` dependency below (imported as `tailscale`).

[lib]
name = "tailscaled_rs"
path = "src/lib.rs"

[[bin]]
name = "tailnetd"
path = "src/bin/tailnetd.rs"

[[bin]]
name = "tnet"
path = "src/bin/tnet.rs"

[dependencies]
# The engine: a from-scratch Rust Tailscale-protocol library. Imported as `tailscale` (the lib
# name), published crate (package) name `geiserx_tailscale` — the workspace renamed every crate to
# the `geiserx_*` namespace for crates.io publication, but kept the importable lib name `tailscale`,
# so `use tailscale::...` is unchanged. Pinned to a specific rev for reproducible builds; Cargo.lock
# is committed so CI and every clone build the exact same engine. (When `geiserx_tailscale` v0.6.7+
# is live on crates.io, this can move to a plain `version`-based crates.io dep.)
#
# Local engine iteration (optional): a *gitignored* `.cargo/config.toml` with
#   paths = ["/path/to/your/tailscale-rs/checkout"]
# transparently overrides this git dep when the local checkout's version matches the pin —
# so you can edit the engine and rebuild the daemon with no manifest change. See README.
tailscale = { package = "geiserx_tailscale", git = "https://github.com/GeiserX/tailscale-rs", rev = "35e5db229b6694baf00dc808282afda274de0b29" }
# The engine's control crate, pinned to the SAME rev as `tailscale` above (Cargo unifies it to the
# identical crate instance, so its types ARE the ones the `tailscale` facade's signatures use). We
# need it directly only to NAME `ts_control::FunnelOptions` for `Device::listen_funnel`: the engine
# facade re-exports `ServeConfig`/`ServeState`/`ServeTarget`/`CertError` at its root but (at this rev)
# NOT `FunnelOptions`/`FunnelError`, so the funnel listener is otherwise uncallable from outside the
# engine crate. Keep this rev in lockstep with `tailscale`'s. (TODO: drop this dep once the engine
# re-exports the Funnel types at its root — coordinated upstream.)
ts_control = { package = "geiserx_ts_control", git = "https://github.com/GeiserX/tailscale-rs", rev = "35e5db229b6694baf00dc808282afda274de0b29" }

# The engine's capability-version constant (`CapabilityVersion::CURRENT`), needed to report `cap` in
# `tnet version --json` (Go's `version.Meta.cap`). Already an engine transitive dep + a published
# crate; the facade does not re-export it, so name it directly — same workaround pattern as the
# `ts_control` dep above. Keep this rev in lockstep with `tailscale`'s.
ts_capabilityversion = { package = "geiserx_ts_capabilityversion", git = "https://github.com/GeiserX/tailscale-rs", rev = "35e5db229b6694baf00dc808282afda274de0b29" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# chrono is already in the tree (the engine re-exports `DateTime<Utc>` on Node/StatusNode), but the
# engine pulls it `default-features = false`, so the `to_rfc3339` formatter is absent. We depend on it
# directly with the minimal `alloc` feature purely to light up `DateTime::to_rfc3339` (Cargo unifies
# the feature across the graph), so `status`/`whois` timestamps emit strict RFC3339 (`…T…+00:00`),
# Go-`ipnstate`-compatible, instead of chrono's space-separated `… UTC` Display form.
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Secret strings: zeroize-on-drop, no Debug/serialize by default (auth keys / tokens in the daemon).
secrecy = "0.10"
# `tnet lock disablement-kdf`: derive a tailnet-lock disablement VALUE from a disablement SECRET — the
# pure-local, offline Argon2i KDF Go `tka.DisablementKDF` uses (`argon2.Key`, i.e. Argon2i, NOT the
# crate-default Argon2id). `default-features = false` keeps it alloc-only. Byte-for-byte verified
# against Go v1.100.0 goldens in the command's test.
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
# Peer-process euid for the same-user LocalAPI write policy. libc is already in the tree
# (transitively via the engine); used only for geteuid() on unix.
libc = "0.2"
# Parse a control-server URL string (from prefs / CLI) into the engine's `url::Url` Config field.
# Pinned to the same 2.x the engine resolves.
url = "2"
# Parse `--advertise-routes` CIDR strings into `ipnet::IpNet` for the engine's `advertise_routes`
# Config field. Pinned to the same 2.x the engine resolves (so the IpNet types are identical).
ipnet = "2.12"
# `double_option` for the `exit_node: Option<Option<String>>` wire field: lets serde distinguish an
# ABSENT key (→ None = "leave the pref unchanged") from a present `null` (→ Some(None) = "clear the
# exit node"). Without it, `#[serde(default)]` collapses both to None and the clear command becomes a
# silent no-op. Already in the tree transitively via the engine (3.x).
serde_with = "3"
# `tnet update`: a minimal rustls-backed HTTP client for the GitHub Releases version-check + asset
# download. ureq 3 defaults to rustls (the `ring` provider + webpki-roots — the SAME crypto family the
# engine already pulls, so NO OpenSSL is introduced), follows the api.github.com → CDN cross-host 30x
# redirect (dropping the auth header on the different host), and is blocking — called from
# `tokio::task::spawn_blocking`. `default-features = false` drops the gzip default (a tarball download
# needs no client-side gunzip). Smallest capable footprint for one GET + one download.
ureq = { version = "3", default-features = false, features = ["rustls"] }
# `tnet update`: verify the downloaded release tarball against its published `.sha256` sidecar
# (GNU `sha256sum` format). INTEGRITY only (detects corruption/truncation), NOT authenticity — the
# fork has no signing infrastructure; `update` says so plainly. `sha2` already resolves transitively
# via the engine, but we depend on it directly so a future engine change can't drop it out from under
# the updater.
sha2 = "0.10"
# `tnet update`: unpack the downloaded release tarball (`tailscaled-rs-…tar.gz` → extract `tnet`).
# `flate2` with its pure-Rust `miniz_oxide` backend (no zlib C dep) gunzips; `tar` reads the archive.
# Both are small, widely-vetted, pure-Rust. `flate2` already resolves transitively via the engine; we
# pin it directly (with the rust backend) so the updater can name it and it can't be dropped.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
# RNG for generating the Tailscale SSH server's host key (`russh::keys::PrivateKey::random`). Must
# be `rand 0.10` — russh 0.61's `ssh-key` bounds `random` on `rand_core 0.10`'s `CryptoRng`, which
# `rand 0.9`'s `ThreadRng` does NOT implement (verified: build fails with a CryptoRng trait-bound
# error on 0.9). Only pulled in with the `ssh` feature; optional so the default build never links it.
rand = { version = "0.10", optional = true }
# Enumerate the host's network interfaces. Two uses, both unix: (1) on macOS, pick a free `utunN`
# for TUN mode (the engine's default `tailscale0` is Linux-only and tun-rs needs an explicit free
# utun index); (2) the link-change monitor (`ipn::linkmon`) snapshots non-loopback interface
# addresses to detect a host network-path change (Wi-Fi switch / sleep-wake) and rebind the engine.
# Cross-platform crate; already in the tree transitively via the engine.
[target.'cfg(unix)'.dependencies]
if-addrs = "0.15"

[features]
# TUN-mode data path (Phase 3). Off by default so the standard build stays lean and unprivileged
# (the default is the engine's userspace smoltcp netstack). Enabling `tun` pulls in the engine's
# kernel-TUN transport (`ts_transport_tun` via `tailscale/tun`); a daemon built with it can run in
# `TransportMode::Tun`, which needs root / `CAP_NET_ADMIN` and a TUN-capable platform (Linux
# `/dev/net/tun`, macOS `utun`). Build with `cargo build --features tun`.
default = []
tun = ["tailscale/tun"]
# Tailscale SSH server (Phase 4, tsd-46c). Off by default — it's a remote-shell surface, so it is
# opt-in at BUILD time (the `ssh` cargo feature) AND at runtime (the `ssh_enabled` pref / `--ssh`).
# Pulls in the engine's `ssh` feature (russh-based server + control-policy authorization +
# privilege-dropping login shell). Running the server needs root (to drop privileges to the
# policy-mapped local user). Build with `cargo build --features ssh`.
ssh = ["tailscale/ssh", "dep:rand"]
# Real ACME certificate issuance for `serve https`/funnel (Phase 4). Off by default — issuance is
# SaaS-only (the node talks Let's Encrypt directly and publishes the DNS-01 challenge via the
# control plane's `POST /machine/set-dns`, which a self-hosted control plane may 501 on), and it
# pulls the engine's `acme` feature (adds only `base64` + `rcgen`, both pure-Rust + ring-only — no
# second crypto backend). WITHOUT it, the engine's serve/TLS path still compiles and is wired, but
# `Device::set_serve_config` for any TLS-terminating (web) port fails closed with a cert error
# (never a plaintext downgrade); plain TCP-forward serve is unaffected. Build with
# `cargo build --features acme` to issue real certs against a Funnel/HTTPS-enabled SaaS tailnet.
acme = ["tailscale/acme"]
# Workload-identity federation (Phase 4, tsd-1m9): enables the engine's `identity-federation` feature
# so the registration path can exchange an OAuth client secret or an IdP-issued OIDC token for a
# Tailscale auth key (Go `tailscale up --client-id/--client-secret/--id-token/--audience`). SaaS-only,
# off by default. Build with `cargo build --features identity-federation`.
identity-federation = ["tailscale/identity-federation"]

[profile.release]
strip = true
